--- a/static/bootstrap/css/style.css
+++ b/static/bootstrap/css/style.css
@@ -30,7 +30,7 @@ h2 {
 .heading_container {
   display: flex;
   flex-direction: column;
-  align-items: flex-start; }
+  align-items: center; }
   .heading_container h2 {
     position: relative;
     margin-bottom: 0;
@@ -67,7 +67,7 @@ a:focus {
   flex-direction: column; }
 
 .bg-box {
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   width: 100%;
@@ -244,6 +244,9 @@ a:focus {
         height: 20px;
         background-color: #88cf7d; }
 
+.reg-btn {
+  color: #88cf7d; }
+
 .offer_section {
   position: relative;
   padding-top: 45px; }
@@ -316,7 +319,6 @@ a:focus {
   background-color: #ffffff;
   border-radius: 10px;
   color: #ffffff;
-  border-radius: 15px;
   overflow: hidden;
   background: linear-gradient(to bottom, #f1f2f3 25px, #222831 25px); }
   .food_section .box .img-box {
