--- a/static/bootstrap/css/style.scss
+++ b/static/bootstrap/css/style.scss
@@ -75,7 +75,7 @@ h2 {
 .heading_container {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
 
   h2 {
     position: relative;
@@ -125,7 +125,7 @@ a:focus {
 }
 
 .bg-box {
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   width: 100%;
@@ -384,6 +384,12 @@ a:focus {
 
 // end slider section
 
+.reg-btn {
+  color: $primary1;
+
+}
+
+
 // offer section
 
 .offer_section {
@@ -493,7 +499,6 @@ a:focus {
     background-color: $white;
     border-radius: 10px;
     color: $white;
-    border-radius: 15px;
     overflow: hidden;
     background: linear-gradient(to bottom, #f1f2f3 25px, $primary2 25px);
 
@@ -903,5 +908,6 @@ a:focus {
     }
   }
 }
+
 
 // end footer section
