--- a/templates/main/generator.html
+++ b/templates/main/generator.html
@@ -1,7 +1,8 @@
 {% extends "main/base.html" %}
 {% load static %}
 
-{% block title %} Главная страница {% endblock %}
+{% block title %} Генератор рациона {% endblock %}
+
 {% block content %}
 
 
