started doing auth

--- a/templates/main/about.html
+++ b/templates/main/about.html
@@ -1,41 +1,34 @@
-{% extends "main/base.html" %}
+{% extends 'main/base.html' %}
 {% load static %}
-
-
-{% block title %} О нас {% endblock %}
+{% block title %} О StudFood {% endblock %}
 
 {% block content %}
-    <section class="about_section">
-        <div class="row">
-            <div class="container-fluid col-md-6">
-                <div class="heading_container"><h2>О нас</h2></div>
-                <p>
-                    Добро пожаловать на StudFood - веб-сайт вкусной и доступной кулинарии! Я - студент, который
-                    понимает, как важно вести активный образ жизни и при этом не расходовать последние деньги на еду. Я
-                    точно знаю, что вы ищете - вкусные рецепты, которые не обременят ваш бюджет.</p>
-                <p>
-                    <b>Доступность:</b> Я уверен, что вкусная еда не должна быть дорогой. На StudFood вы найдете недорогие и
-                    простые рецепты, которые подойдут даже самым ограниченным бюджетам. Моя миссия - сделать кулинарию
-                    доступной каждому студенту.</p>
-                <p>
-                    <b>Простота:</b> Я понимаю, что у студентов мало времени и опыта в кулинарии. Поэтому все наши рецепты
-                    отобраны так, чтобы они были легки в приготовлении даже для новичков. У вас не будет
-                    необходимости в
-                    дорогих кулинарных инструментах и продуктах из экзотических магазинов. Мы делаем кулинарию простой и
-                    веселой. </p>
-                <p>
-                    <b>Планирование рациона:</b> StudFood не только предлагает рецепты, но и помогает вам спланировать свой
-                    рацион на несколько дней вперед. Умный генератор рациона позволяет вам создавать недельные меню,
-                    учитывая ваши предпочтения, бюджет и доступные ингредиенты. Забудьте о повседневных заботах о том, что
-                    приготовить сегодня - StudFood сделает это за вас!</p>
-                <p>
-                    Если у вас есть вопросы, предложения или вы просто хотите поделиться своими кулинарными успехами,
-                    свяжитесь со мной:
-                    VK: https://vk.com/giveuper
-                    GitHub: https://some-github-link.com
-                    Другие ссылки будут позже...</p>
+    <section class="py-5" style="padding-top: 0px;">
+        <div class="container py-5" style="padding: 0 0;padding-top: 0px;">
+            <div class="row text-start mb-5">
+                <div class="col-md-8 col-xl-6 col-xxl-9 text-center m-auto">
+                    <h2 class="fw-bold" style="font-family: 'Open Sans', sans-serif;">О нас</h2>
+                    <p style="font-family: 'Open Sans', sans-serif;font-size: 18px;">Добро пожаловать на StudFood -
+                        веб-сайт вкусной и доступной кулинарии! Я - студент, который знаут, как важно вести
+                        активный образ жизни и при этом не расходовать последние деньги на еду. Мои корни находятся в
+                        учебных аудиториях и студенческих общежитиях, и я знаю, что именно вы ищете - вкусные рецепты,
+                        которые не обременят ваш бюджет.</p>
+                    <p style="font-family: 'Open Sans', sans-serif;font-weight: bold;font-size: 19px;">Доступность</p>
+                    <p style="font-family: 'Open Sans', sans-serif;font-size: 18px;">Я уверен, что вкусная еда не должна
+                        быть дорогой. На StudFood вы найдете недорогие и простые рецепты, которые подойдут даже самым
+                        ограниченным бюджетам. Наша миссия - сделать кулинарию доступной каждому студенту.</p>
+                    <p style="font-size: 19px;font-family: 'Open Sans', sans-serif;font-weight: bold;">Простота</p>
+                    <p style="font-family: 'Open Sans', sans-serif;font-size: 18px;">Я понимаю, что у студентов мало
+                        времени и опыта в кулинарии. Поэтому все рецепты&nbsp;отобраны так, чтобы они были легки в
+                        приготовлении даже для новичков. У вас не будет необходимости в дорогих кулинарных инструментах
+                        и продуктах из экзотических магазинов.</p>
+                    <p style="font-size: 19px;font-weight: bold;">Планирование рациона</p>
+                    <p style="font-size: 18px;">StudFood не только предлагает рецепты, но и помогает вам спланировать
+                        свой рацион на несколько дней вперед. Умный генератор рациона позволяет вам создавать недельные
+                        меню, учитывая ваши предпочтения, бюджет и доступные ингредиенты. Забудьте о повседневных
+                        заботах о том, что приготовить сегодня - StudFood сделает это за вас!</p>
+                </div>
             </div>
         </div>
     </section>
-
 {% endblock %}
