--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -1,151 +1,103 @@
 <!DOCTYPE html>
-<html lang="en">
+<html data-bs-theme="light" lang="en"
+      style="background: linear-gradient(165deg, var(--bs-primary), var(--bs-secondary)); min-height: 100%; height: 100%">
+
 <head>
     {% load static %}
-    <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <!-- Mobile Metas -->
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-    <!-- Site Metas -->
-    <meta name="keywords" content=""/>
-    <meta name="description" content=""/>
-    <meta name="author" content=""/>
-    <link rel="shortcut icon" href="{% static "bootstrap/images/favicon.png" %}" type="">
-
-    <title> {% block title %}{% endblock %} </title>
-
-    <!-- bootstrap core css -->
-    <link rel="stylesheet" type="text/css" href="{% static "bootstrap/css/bootstrap.css" %}"/>
-
-    <!--owl slider stylesheet -->
-    <link rel="stylesheet" type="text/css"
-          href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
-    <!-- nice select  -->
-    <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/css/nice-select.min.css"
-          integrity="sha512-CruCP+TD3yXzlvvijET8wV5WxxEh5H8P4cmz0RFbKK6FlZ2sYl3AEsKlLPHbniXKSrDdFewhbmBK5skbdsASbQ=="
-          crossorigin="anonymous"/>
-    <!-- font awesome style -->
-    <link href="{% static "bootstrap/css/font-awesome.min.css" %}" rel="stylesheet"/>
-
-    <!-- Custom styles for this template -->
-    <link href="{% static "bootstrap/css/style.css" %}? {% now "U" %}" rel="stylesheet"/>
-    <!-- responsive style -->
-    <link href="{% static "bootstrap/css/responsive.css" %}" rel="stylesheet"/>
-
-
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>{% block title %}{% endblock %}</title>
+    <link rel="icon" type="image/x-icon" href="{% static 'img/icon.svg' %}">
+    <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dancing+Script&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans&amp;display=swap">
+    <link rel="stylesheet" href="{% static 'fonts/fontawesome-all.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bs-theme-overrides.css' %}">
 </head>
-<body>
 
-<div class="hero_area bg-box">
-
-    <!-- header section strats -->
-    <header class="header_section">
-        <div class="container">
-            <nav class="navbar navbar-expand-lg custom_nav-container ">
-                <a class="navbar-brand" href="{% url "index" %}">
-            <span>
-              StudFood
-            </span>
-                </a>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav  mx-auto ">
-                        {% url "index" as url %}
-                        <li class="nav-item {% if request.path == url %} active {% endif %}">
-                            <a class="nav-link" href="{% url "index" %}">На главную</a>
-                        </li>
-                        {% url "catalogue" as url %}
-                        <li class="nav-item {% if request.path == url %} active {% endif %}">
-                            <a class="nav-link" href="{% url "catalogue" %}">Рецепты</a>
-                        </li>
-                        {% url "generator" as url %}
-                        <li class="nav-item {% if request.path == url %} active {% endif %}">
-                            <a class="nav-link" href="{% url "generator" %}">Генератор рациона</a>
-                        </li>
-                        {% url "about" as url %}
-                        <li class=" nav-item {% if request.path == url %} active {% endif %}">
-                            <a class="nav-link" href="{% url "about" %}">О нас</a>
-                        </li>
-                    </ul>
-                    <div class="user_option">
-                        <a class="fav_link" href="">
-                            <i class="fa fa-heart" aria-hidden="true"></i>
-                        </a>
-                        <a href="{% url "login" %}" class="order_online">
-                            Войти
-                        </a>
-                    </div>
-                </div>
-            </nav>
+<body style="border-style: none;background: transparent;min-height: 100%; height: 100%">
+<div style="flex: 1; display: flex; flex-direction: column; min-height: 100%; height: 100%">
+<nav class="navbar navbar-expand-md sticky-top navbar-shrink py-3 navbar-light" id="mainNav"
+     style="background: transparent;position: relative;opacity: 1;backdrop-filter: opacity(0) brightness(0%) contrast(0%);--bs-body-bg: var(--bs-navbar-toggler-border-color);border-style: none;overflow: visible;display: block;">
+    <div class="container"><a class="navbar-brand d-flex align-items-center" href="{% url 'index' %}"><span
+            style="font-family: Dancing Script;font-size: 40px;">StudFood</span></a>
+        <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span
+                class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="collapse navbar-collapse d-xxl-flex" id="navcol-1">
+            <ul class="navbar-nav mx-auto">
+                {% url 'index' as url %}
+                <li class="nav-item"><a class="nav-link {% if request.path == url %} active {% endif %}"
+                                        href="{% url 'index' %}"
+                                        style="font-family: 'Open Sans';">На
+                    главную</a></li>
+                {% url 'recipes' as url %}
+                <li class="nav-item"><a class="nav-link {% if request.path == url %} active {% endif %}"
+                                        href="{% url 'recipes' %}"
+                                        style="font-family: 'Open Sans';">Рецепты</a></li>
+                {% url 'generator' as url %}
+                <li class="nav-item"><a class="nav-link {% if request.path == url %} active {% endif %}"
+                                        href="{% url 'generator' %}"
+                                        style="font-family: 'Open Sans', sans-serif;">Генератор рациона</a></li>
+                {% url 'about' as url %}
+                <li class="nav-item"><a class="nav-link {% if request.path == url %} active {% endif %}"
+                                        href="{% url 'about' %}"
+                                        style="font-family: 'Open Sans', sans-serif;">О нас</a></li>
+                <li class="nav-item"></li>
+            </ul>
+            <a href="{% url 'favourite' %}" style="margin: 0px;margin-right: 14px;margin-top: 3px;"><i
+                    class="fas fa-heart"
+                    style="font-size: 28px;color: red;border-style: none;border-color: #52ff00;"></i></a><a
+                class="btn btn-primary shadow" role="button"
+                style="font-family: 'Open Sans', sans-serif;background: #88cf7d;color: black;border-style: none;"
+                {% if request.user.is_authenticated %} href="{% url 'profile' %}"> Профиль {% else %}
+                    href="{% url 'login' %}"> Войти
+                {% endif %} </a>
         </div>
-    </header>
-    {% block content %}
-    {% endblock %}
-</div>
+    </div>
+</nav>
 
+{% block content %}
+{% endblock %}
 
-<footer class="footer_section">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-4 footer-col">
-                <div class="footer_contact">
-                    <h4>
-                        Связаться с нами
-                    </h4>
-                    <div class="contact_link_box">
-                        <a href="">
-                            <i class="fa fa-phone" aria-hidden="true"></i>
-                            <span>
-                                    Звоните 8 (800) 555 35-35
-                                </span>
-                        </a>
-                        <a href="">
-                            <i class="fa fa-envelope" aria-hidden="true"></i>
-                            <span>
-                                st107938@student.spbu.ru
-                            </span>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-4 footer-col">
-                <div class="footer_detail">
-                    <a href="" class="footer-logo">
-                        StudFood
-                    </a>
-                    <div class="footer_social">
-                        <a href="https://vk.com/giveuper">
-                            <img src="{% static "images/VK Logo.svg" %}" alt="VK" height="20" width="20">
-                        </a>
-                        <a href="">
-                            <i class="fa fa-github"></i>
-                        </a>
-                    </div>
-                </div>
+<footer class="d-xl-flex flex-fill bg-primary-gradient"
+        style="font-family: 'Open Sans';background: transparent;color: white;margin-bottom: 12px;position: static;display: flex;overflow: visible;transform: perspective(0px);">
+    <div class="container flex-shrink-0 py-4 py-lg-5"
+         style="position: relative;display: block;background: transparent;">
+        <div class="row justify-content-center">
+            <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
+                <h3 class="fs-6 fw-bold" style="color: var(--bs-body-color);text-align: center;">Связаться с нами</h3>
+                <ul class="list-group list-group-horizontal text-center d-inline-flex float-none justify-content-center"
+                    style="border-style: none;">
+                    <li class="list-group-item" style="background: transparent;border-style: none;"><a
+                            href="https://t.me/Giveuper"
+                            style="font-size: 0;">Li
+                        <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor"
+                             viewBox="0 0 16 16" class="bi bi-telegram" style="font-size: 30px;">
+                            <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.287 5.906c-.778.324-2.334.994-4.666 2.01-.378.15-.577.298-.595.442-.03.243.275.339.69.47l.175.055c.408.133.958.288 1.243.294.26.006.549-.1.868-.32 2.179-1.471 3.304-2.214 3.374-2.23.05-.012.12-.026.166.016.047.041.042.12.037.141-.03.129-1.227 1.241-1.846 1.817-.193.18-.33.307-.358.336a8.154 8.154 0 0 1-.188.186c-.38.366-.664.64.015 1.088.327.216.589.393.85.571.284.194.568.387.936.629.093.06.183.125.27.187.331.236.63.448.997.414.214-.02.435-.22.547-.82.265-1.417.786-4.486.906-5.751a1.426 1.426 0 0 0-.013-.315.337.337 0 0 0-.114-.217.526.526 0 0 0-.31-.093c-.3.005-.763.166-2.984 1.09z"></path>
+                        </svg>
+                        nk</a></li>
+                    <li class="list-group-item" style="border-style: none;background: transparent;"><a
+                            href="https://github.com/giveuper39">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor"
+                             viewBox="0 0 16 16" class="bi bi-github" style="font-size: 30px;">
+                            <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"></path>
+                        </svg>
+                    </a></li>
+                    <li class="list-group-item" style="border-style: none;background: transparent;"><a
+                            href="https://vk.com/giveuper"><i
+                            class="fab fa-vk" style="font-size: 30px;"></i></a></li>
+                </ul>
             </div>
         </div>
-        <div class="footer-info">
-            <p>
-                &copy; <span id="displayYear"></span> All Rights Reserved By Giveuper (me)
-            </p>
+        <hr>
+        <div class="text-muted d-flex justify-content-center align-items-center pt-3">
+            <p class="justify-content-center mb-0" style="position: relative;display: inline-flex;">Copyright © 2023
+                StudFood</p>
         </div>
     </div>
 </footer>
-<script src="{% static "bootstrap/js/jquery-3.4.1.min.js" %}"></script>
-<!-- popper js -->
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-</script>
-<!-- bootstrap js -->
-<script src="../../static/bootstrap/js/bootstrap.js"></script>
-<!-- owl slider -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
-</script>
-<!-- isotope js -->
-<script src="https://unpkg.com/isotope-layout@3.0.4/dist/isotope.pkgd.min.js"></script>
-<!-- nice select -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/js/jquery.nice-select.min.js"></script>
-<!-- custom js -->
-<script src="{% static "bootstrap/js/custom.js" %}"></script>
+<script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
+<script src="{% static 'js/bold-and-bright.js' %}"></script>
+</div>
 </body>
 </html>
