--- a/templates/main/generator.html
+++ b/templates/main/generator.html
@@ -1,9 +1,199 @@
 {% extends "main/base.html" %}
 {% load static %}
-
 {% block title %} Генератор рациона {% endblock %}
-
 {% block content %}
-
-
+    <section class="py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-4">
+                    <h3 class="text-center">Настройки</h3>
+                    <div class="card d-xxl-flex justify-content-center align-items-center align-content-center justify-content-xxl-start"
+                         style="background: transparent;">
+                        <div class="card-body" style="background: transparent;">
+                            <div>
+                                <form>
+                                    <div class="d-inline-flex d-xxl-flex justify-content-between align-content-center align-self-center m-auto align-items-xxl-center">
+                                        <label class="form-label"
+                                               style="font-size: 19px;padding: 0px;margin-right: 10px;" for="days_num">Количество
+                                            дней</label><input class="form-control form-control-sm" type="number"
+                                                               min="1" max="15" value="7" name="days_num"
+                                                               style="width: 87.445px;font-size: 17px;background: transparent;border-style: solid;"
+                                                               required=""></div>
+                                    <div class="d-inline-flex d-xxl-flex justify-content-between align-content-center align-self-center m-auto align-items-xxl-center">
+                                        <label class="form-label"
+                                               style="font-size: 19px;padding: 0px;margin-right: 10px;">Редактировать
+                                            избранное</label>
+                                        <button class="btn btn-primary" type="button" onclick="window.location.href='{% url 'favourite' %}'"
+                                                style="padding: 10px 10px;font-size: 15px;">Редактировать
+                                        </button>
+                                    </div>
+                                    <div class="d-inline-flex d-xxl-flex justify-content-between align-content-center align-self-center m-auto align-items-xxl-center">
+                                        <label class="form-label"
+                                               style="font-size: 19px;padding: 0px;margin-right: 10px;">Приемы
+                                            пищи</label>
+                                        <div>
+                                            <div class="form-check"><input class="form-check-input" type="checkbox"
+                                                                           id="formCheck-1" checked=""
+                                                                           name="lunch"><label class="form-check-label"
+                                                                                               for="formCheck-1"
+                                                                                               style="font-size: 17px;">Завтрак</label>
+                                            </div>
+                                            <div class="form-check"><input class="form-check-input" type="checkbox"
+                                                                           id="formCheck-3" checked=""
+                                                                           name="lunch"><label class="form-check-label"
+                                                                                               for="formCheck-3"
+                                                                                               style="font-size: 17px;">Обед</label>
+                                            </div>
+                                            <div class="form-check"><input class="form-check-input" type="checkbox"
+                                                                           id="formCheck-2" checked=""
+                                                                           name="dinner"><label class="form-check-label"
+                                                                                                for="formCheck-2"
+                                                                                                style="font-size: 17px;">Ужин</label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </form>
+                                <button class="btn btn-primary" type="button" style="background: #369f26;">Генерация
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <ol class="list-group">
+                        <li class="list-group-item"
+                            style="background: transparent;border-width: 2px;border-style: solid;">
+                            <div>
+                                <h4>День 1</h4>
+                                <ul class="list-unstyled">
+                                    <li>
+                                        <div class="d-xxl-flex justify-content-xxl-start align-items-xxl-start">
+                                            <p style="margin-right: 10px;margin-bottom: 10px;">Завтрак</p><a href="#">
+                                            <p style="color: var(--bs-list-group-active-bg);font-weight: bold;">
+                                                Омлет</p>
+                                        </a>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="d-xxl-flex justify-content-xxl-start align-items-xxl-start">
+                                            <p style="margin-right: 10px;margin-bottom: 10px;">Обед</p><a href="#">
+                                            <p style="color: var(--bs-list-group-active-bg);font-weight: bold;">Борщ</p>
+                                        </a>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="d-xxl-flex justify-content-xxl-start align-items-xxl-start">
+                                            <p style="margin-right: 10px;margin-bottom: 10px;">Ужин</p><a href="#">
+                                            <p style="color: var(--bs-list-group-active-bg);font-weight: bold;">Курица
+                                                Карри с рисом</p>
+                                        </a>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="list-group-item"
+                            style="background: transparent;border-width: 2px;border-style: solid;">
+                            <div>
+                                <h4>День 2</h4>
+                                <ul class="list-unstyled">
+                                    <li>
+                                        <div class="d-xxl-flex justify-content-xxl-start align-items-xxl-start">
+                                            <p style="margin-right: 10px;margin-bottom: 10px;">Завтрак</p><a href="#">
+                                            <p style="color: var(--bs-list-group-active-bg);font-weight: bold;">
+                                                Омлет</p>
+                                        </a>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="d-xxl-flex justify-content-xxl-start align-items-xxl-start">
+                                            <p style="margin-right: 10px;margin-bottom: 10px;">Обед</p><a href="#">
+                                            <p style="color: var(--bs-list-group-active-bg);font-weight: bold;">Борщ</p>
+                                        </a>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="d-xxl-flex justify-content-xxl-start align-items-xxl-start">
+                                            <p style="margin-right: 10px;margin-bottom: 10px;">Ужин</p><a href="#">
+                                            <p style="color: var(--bs-list-group-active-bg);font-weight: bold;">Курица
+                                                Карри с рисом</p>
+                                        </a>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="list-group-item"
+                            style="background: transparent;border-width: 2px;border-style: solid;">
+                            <div>
+                                <h4>День 3</h4>
+                                <ul class="list-unstyled">
+                                    <li>
+                                        <div class="d-xxl-flex justify-content-xxl-start align-items-xxl-start">
+                                            <p style="margin-right: 10px;margin-bottom: 10px;">Завтрак</p><a href="#">
+                                            <p style="color: var(--bs-list-group-active-bg);font-weight: bold;">
+                                                Омлет</p>
+                                        </a>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="d-xxl-flex justify-content-xxl-start align-items-xxl-start">
+                                            <p style="margin-right: 10px;margin-bottom: 10px;">Обед</p><a href="#">
+                                            <p style="color: var(--bs-list-group-active-bg);font-weight: bold;">Борщ</p>
+                                        </a>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="d-xxl-flex justify-content-xxl-start align-items-xxl-start">
+                                            <p style="margin-right: 10px;margin-bottom: 10px;">Ужин</p><a href="#">
+                                            <p style="color: var(--bs-list-group-active-bg);font-weight: bold;">Курица
+                                                Карри с рисом</p>
+                                        </a>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="list-group-item"
+                            style="background: transparent;border-width: 2px;border-style: solid;">
+                            <div>
+                                <h4>День 4</h4>
+                                <ul class="list-unstyled">
+                                    <li>
+                                        <div class="d-xxl-flex justify-content-xxl-start align-items-xxl-start">
+                                            <p style="margin-right: 10px;margin-bottom: 10px;">Завтрак</p><a href="#">
+                                            <p style="color: var(--bs-list-group-active-bg);font-weight: bold;">
+                                                Омлет</p>
+                                        </a>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="d-xxl-flex justify-content-xxl-start align-items-xxl-start">
+                                            <p style="margin-right: 10px;margin-bottom: 10px;">Обед</p><a href="#">
+                                            <p style="color: var(--bs-list-group-active-bg);font-weight: bold;">Борщ</p>
+                                        </a>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="d-xxl-flex justify-content-xxl-start align-items-xxl-start">
+                                            <p style="margin-right: 10px;margin-bottom: 10px;">Ужин</p><a href="#">
+                                            <p style="color: var(--bs-list-group-active-bg);font-weight: bold;">Курица
+                                                Карри с рисом</p>
+                                        </a>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                    </ol>
+                    <div class="d-xxl-flex justify-content-between" style="padding: 15px;"><a
+                            class="d-xxl-flex justify-content-xxl-start" href="#"
+                            style="color: var(--bs-primary-text-emphasis);text-decoration: underline;">Cписок
+                        покупок</a><a class="d-xxl-flex justify-content-xxl-end" href="#"
+                                      style="color: var(--bs-primary-text-emphasis);text-decoration: underline;">Экспорт
+                        в Excel</a></div>
+                </div>
+            </div>
+        </div>
+    </section>
 {% endblock %}
