created default user and test recipes

--- a/templates/main/profile.html
+++ b/templates/main/profile.html
@@ -17,6 +17,7 @@
                                 <div class="mb-3"><input class="form-control form-control-sm" type="password" name="password" placeholder="Пароль"></div>
                                 <div class="mb-3"><input class="form-control form-control-sm" type="password" name="password_again" placeholder="Пароль (еще раз)"></div>
                                 <div class="mb-3"><button class="btn btn-primary btn-sm shadow d-block w-100" type="submit">Изменить</button></div>
+                                <div class="mb-3"><a class="btn btn-primary btn-sm shadow d-block w-100" type="submit" style="background:mediumvioletred;" href="{% url 'logout' %}">Выйти</a></div>
                             </form>
                         </div>
                     </div>
