--- a/templates/main/generator.html
+++ b/templates/main/generator.html
@@ -11,14 +11,12 @@
                          style="background: transparent;">
                         <div class="card-body" style="background: transparent;">
                             <div>
-                                <form>
+                                <form method="post">
+                                    {% csrf_token %}
                                     <div class="d-inline-flex d-xxl-flex justify-content-between align-content-center align-self-center m-auto align-items-xxl-center">
                                         <label class="form-label"
                                                style="font-size: 19px;padding: 0px;margin-right: 10px;" for="days_num">Количество
-                                            дней</label><input class="form-control form-control-sm" type="number"
-                                                               min="1" max="15" value="7" name="days_num"
-                                                               style="width: 87.445px;font-size: 17px;background: transparent;border-style: solid;"
-                                                               required=""></div>
+                                            дней</label>{{ gen_form.days_num }}</div>
                                     <div class="d-inline-flex d-xxl-flex justify-content-between align-content-center align-self-center m-auto align-items-xxl-center">
                                         <label class="form-label"
                                                style="font-size: 19px;padding: 0px;margin-right: 10px;">Редактировать
@@ -32,29 +30,24 @@
                                                style="font-size: 19px;padding: 0px;margin-right: 10px;">Приемы
                                             пищи</label>
                                         <div>
-                                            <div class="form-check"><input class="form-check-input" type="checkbox"
-                                                                           id="formCheck-1" checked=""
-                                                                           name="lunch"><label class="form-check-label"
+                                            <div class="form-check">{{ gen_form.breakfast_check }}<label class="form-check-label"
                                                                                                for="formCheck-1"
                                                                                                style="font-size: 17px;">Завтрак</label>
                                             </div>
-                                            <div class="form-check"><input class="form-check-input" type="checkbox"
-                                                                           id="formCheck-3" checked=""
-                                                                           name="lunch"><label class="form-check-label"
-                                                                                               for="formCheck-3"
+                                            <div class="form-check">{{ gen_form.lunch_check }}<label class="form-check-label"
+                                                                                               for="formCheck-2"
                                                                                                style="font-size: 17px;">Обед</label>
                                             </div>
-                                            <div class="form-check"><input class="form-check-input" type="checkbox"
-                                                                           id="formCheck-2" checked=""
-                                                                           name="dinner"><label class="form-check-label"
-                                                                                                for="formCheck-2"
+                                            <div class="form-check">{{ gen_form.dinner_check }}<label class="form-check-label"
+                                                                                                for="formCheck-3"
                                                                                                 style="font-size: 17px;">Ужин</label>
                                             </div>
                                         </div>
                                     </div>
+                                    <input class="btn btn-primary" type="submit" style="background: #369f26;" value="Генерация">
                                 </form>
-                                <button class="btn btn-primary" type="button" style="background: #369f26;">Генерация
-                                </button>
+                                
+
                             </div>
                         </div>
                     </div>
